feat: adding cascading behaviour to keep services and contractedServices aligned
